# AYCD

./: .gitignore  .prettierignore  .prettierrc  01_README.md  02_Architecture.md  03_Setup.md  04_Features.md  05_API.md  06_Schema.md  07_UI_Guide.md  08_AI_Integration.md  09_Build.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
apps/desktop/: eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/src/: App.svelte  App.tsx  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/commands/: documents.rs  mod.rs  projects.rs
apps/desktop/src-tauri/src/models/: mod.rs
apps/desktop/src-tauri/src/services/: document_service.rs  file_service.rs  mod.rs  project_service.rs
apps/desktop/src/lib/api/: documents.ts  index.ts  projects.ts
apps/desktop/src/lib/components/: DocumentBrowser.css  DocumentBrowser.svelte  DocumentBrowser.tsx  ModeSwitcher.css  ModeSwitcher.svelte  ModeSwitcher.tsx  ProjectSelector.css  ProjectSelector.svelte  ProjectSelector.tsx  ProjectWorkspace.css  ProjectWorkspace.svelte  ProjectWorkspace.tsx  RichTextEditor.svelte
apps/desktop/src/lib/contexts/: DocumentContext.tsx  ProjectContext.tsx
apps/desktop/src/lib/stores/: document.svelte.ts  project.svelte.ts
apps/desktop/src/styles/: app.css
